fix npm behavior

--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.0.1",
-    "nodemon": "^1.14.7"
+    "mongodb": "^3.0.1"
   }
 }
